Putting the round borders and the bottom part text Putting the borders and the bottom part text.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,36 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" type="image/png" href="images/favicon-32x32.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap"
+      rel="stylesheet"
+    />
     <title>Profile Card Component</title>
   </head>
   <body>
-    <h1>Hola</h1>
+    <div class="container">
+      <div class="card">
+        <div class="top-part">
+          <!-- <h1>Hola</h1> -->
+        </div>
+        <div class="middle-part">
+          <!-- <h1>Mitad</h1> -->
+        </div>
+        <div class="bottom-part">
+          <div class="bottom-subpart">
+            <h3 class="top-title">80K</h3>
+            <h3 class="sub-title">Followers</h3>
+          </div>
+          <div class="bottom-subpart">
+            <h3 class="top-title">803K</h3>
+            <h3 class="sub-title">Likes</h3>
+          </div>
+          <div class="bottom-subpart">
+            <h3 class="top-title">1.4K</h3>
+            <h3 class="sub-title">Photos</h3>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
