Final commit before submitting. The desktop part is ready to go, the mobiles responsive part is what´s left to figure it out.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
         </div>
         <div class="middle-part">
           <!-- <h1>Mitad</h1> -->
+          <div class="image-victor">
+            <img src="images/image-victor.jpg" />
+            <div>
+              <h2>Victor Crest</h2>
+              <h4>26</h4>
+            </div>
+            <h3>London</h3>
+          </div>
         </div>
         <div class="bottom-part">
           <div class="bottom-subpart">
